[package]
name = "firechain-node"
version = "4.0.0-dev"
description = "Client node"
authors = ["5ireChain"]
edition = "2021"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "firechain-node"

[dependencies]
array-bytes = "4.1"
# clap = { version = "3.1.18", features = ["derive"] }
clap = { version = "4.0.9", optional = true }
clap_complete = { version = "4.0.2", optional = true }
hex-literal = "0.3.4"
codec = { package = "parity-scale-codec", version = "3.0.0" }
rand = "0.8"
jsonrpsee = { version = "0.16.2", features = ["server"] }
hex = { version = "0.4", default-features = false }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.17"


futures = "0.3.21"
sc-cli = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-core = { version = "7.0.0", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-executor = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-service = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-telemetry = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-keystore = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-keystore = { version = "0.13.0", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-transaction-pool = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-consensus-babe = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-consensus-slots = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-consensus-babe = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-consensus-uncles = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-consensus = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-consensus = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-consensus-epochs = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
# sc-finality-grandpa = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
grandpa = { version = "0.10.0-dev", package = "sc-finality-grandpa",  git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT"  }
# sp-finality-grandpa = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-client-api = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-chain-spec = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-network = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-network-common = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-runtime = { version = "7.0.0", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-timestamp = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-authorship = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-inherents = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-keyring = { version = "7.0.0", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-transaction-storage-proof = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-authority-discovery = { version = "4.0.0-dev", default-features = false, git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-sync-state-rpc = { version = "0.10.0-dev", default-features = false, git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-sysinfo = { version = "6.0.0-dev",  git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
grandpa-primitives = { version = "4.0.0-dev", package = "sp-finality-grandpa", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-api = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-rpc-api = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-blockchain = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sp-block-builder = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-basic-authorship = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-consensus-babe-rpc = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-finality-grandpa-rpc = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
#pallet-contracts-rpc = { version = "4.0.0-dev",  git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT"  }
substrate-state-trie-migration-rpc = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT"  }
sc-authority-discovery = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT"  }
pallet-assets = { version = "4.0.0-dev",git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT"}
pallet-asset-tx-payment = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }

# frame dependencies
pallet-im-online = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
frame-system = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
pallet-transaction-payment = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev",  git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }

# node-executor = { version = "3.0.0-dev",git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT"  }
#frontier
# Frontier
fc-cli = { path = "../client/cli" }
fc-consensus = { path = "../client/consensus" }
fc-db = { path = "../client/db" }
fc-mapping-sync = { path = "../client/mapping-sync" }
fc-rpc = { path = "../client/rpc" }
fc-rpc-core = { path = "../client/rpc-core" }
fp-consensus = { path = "../primitives/consensus" }
fp-dynamic-fee = { path = "../primitives/dynamic-fee" }
fp-evm = { path = "../primitives/evm" }
fp-rpc = { path = "../primitives/rpc" }
fp-storage = { path = "../primitives/storage" }
pallet-evm = { path = "../frame/evm" }

# Local Dependencies
node-5ire-runtime = { version = "4.0.0-dev", path = "../runtime" }
node-primitives = { version = "2.0.0", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT", default-features = false  }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" ,optional = true }



clap = { version = "4.0.9", optional = true }
clap_complete = { version = "4.0.2", optional = true }
# node-inspect = { version = "0.9.0-dev", optional = true,  git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT"}
frame-benchmarking-cli = { version = "4.0.0-dev", optional = true, git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT"}
substrate-frame-cli = { version = "4.0.0-dev", optional = true, git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT"}
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT" }
sc-cli = { version = "0.10.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "UAT", optional = true }


[features]
#  default = []
default = ["cli"]
cli = [
	# "node-executor/wasmi-errno",
	# "node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/rocksdb",
	"clap",
	"clap_complete",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
#rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
 runtime-benchmarks = ["node-5ire-runtime/runtime-benchmarks","frame-benchmarking-cli/runtime-benchmarks"]







